rust/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const ORC_NUM_DIMS: u32 = 7;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OrcTypeId {
    pub primitive_id: u32,
    pub opaque_id: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of OrcTypeId"][::std::mem::size_of::<OrcTypeId>() - 8usize];
    ["Alignment of OrcTypeId"][::std::mem::align_of::<OrcTypeId>() - 4usize];
    ["Offset of field: OrcTypeId::primitive_id"]
        [::std::mem::offset_of!(OrcTypeId, primitive_id) - 0usize];
    ["Offset of field: OrcTypeId::opaque_id"]
        [::std::mem::offset_of!(OrcTypeId, opaque_id) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OrcTypeInfo {
    pub type_id: OrcTypeId,
    pub name: *mut ::std::os::raw::c_char,
    pub desc: *mut ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of OrcTypeInfo"][::std::mem::size_of::<OrcTypeInfo>() - 24usize];
    ["Alignment of OrcTypeInfo"][::std::mem::align_of::<OrcTypeInfo>() - 8usize];
    ["Offset of field: OrcTypeInfo::type_id"]
        [::std::mem::offset_of!(OrcTypeInfo, type_id) - 0usize];
    ["Offset of field: OrcTypeInfo::name"][::std::mem::offset_of!(OrcTypeInfo, name) - 8usize];
    ["Offset of field: OrcTypeInfo::desc"][::std::mem::offset_of!(OrcTypeInfo, desc) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OrcFuncInfo {
    pub name: *mut ::std::os::raw::c_char,
    pub desc: *mut ::std::os::raw::c_char,
    pub n_inputs: u64,
    pub n_outputs: u64,
    pub func: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: u64,
            inputs: *const OrcHandle,
            n_inputs: usize,
            outputs: *mut OrcHandle,
            n_outputs: usize,
        ),
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of OrcFuncInfo"][::std::mem::size_of::<OrcFuncInfo>() - 40usize];
    ["Alignment of OrcFuncInfo"][::std::mem::align_of::<OrcFuncInfo>() - 8usize];
    ["Offset of field: OrcFuncInfo::name"][::std::mem::offset_of!(OrcFuncInfo, name) - 0usize];
    ["Offset of field: OrcFuncInfo::desc"][::std::mem::offset_of!(OrcFuncInfo, desc) - 8usize];
    ["Offset of field: OrcFuncInfo::n_inputs"]
        [::std::mem::offset_of!(OrcFuncInfo, n_inputs) - 16usize];
    ["Offset of field: OrcFuncInfo::n_outputs"]
        [::std::mem::offset_of!(OrcFuncInfo, n_outputs) - 24usize];
    ["Offset of field: OrcFuncInfo::func"][::std::mem::offset_of!(OrcFuncInfo, func) - 32usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OrcPlugin {
    pub types: *mut OrcTypeInfo,
    pub n_types: u64,
    pub functions: *mut OrcFuncInfo,
    pub n_functions: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of OrcPlugin"][::std::mem::size_of::<OrcPlugin>() - 32usize];
    ["Alignment of OrcPlugin"][::std::mem::align_of::<OrcPlugin>() - 8usize];
    ["Offset of field: OrcPlugin::types"][::std::mem::offset_of!(OrcPlugin, types) - 0usize];
    ["Offset of field: OrcPlugin::n_types"][::std::mem::offset_of!(OrcPlugin, n_types) - 8usize];
    ["Offset of field: OrcPlugin::functions"]
        [::std::mem::offset_of!(OrcPlugin, functions) - 16usize];
    ["Offset of field: OrcPlugin::n_functions"]
        [::std::mem::offset_of!(OrcPlugin, n_functions) - 24usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OrcHost {
    pub memory_api: OrcHost__bindgen_ty_1,
    pub callbacks: OrcHost__bindgen_ty_2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OrcHost__bindgen_ty_1 {
    pub alloc: ::std::option::Option<
        unsafe extern "C" fn(size: u64, alignment: u64) -> *mut ::std::os::raw::c_void,
    >,
    pub dealloc: ::std::option::Option<
        unsafe extern "C" fn(ptr: *mut ::std::os::raw::c_void, size: u64, alignment: u64),
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of OrcHost__bindgen_ty_1"][::std::mem::size_of::<OrcHost__bindgen_ty_1>() - 16usize];
    ["Alignment of OrcHost__bindgen_ty_1"]
        [::std::mem::align_of::<OrcHost__bindgen_ty_1>() - 8usize];
    ["Offset of field: OrcHost__bindgen_ty_1::alloc"]
        [::std::mem::offset_of!(OrcHost__bindgen_ty_1, alloc) - 0usize];
    ["Offset of field: OrcHost__bindgen_ty_1::dealloc"]
        [::std::mem::offset_of!(OrcHost__bindgen_ty_1, dealloc) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OrcHost__bindgen_ty_2 {
    pub report_progress: ::std::option::Option<unsafe extern "C" fn(ctx: u64, progress: f64)>,
    pub report_error:
        ::std::option::Option<unsafe extern "C" fn(ctx: u64, error: *const ::std::os::raw::c_char)>,
    pub report_warning: ::std::option::Option<
        unsafe extern "C" fn(ctx: u64, warning: *const ::std::os::raw::c_char),
    >,
    pub check_cancellation: ::std::option::Option<unsafe extern "C" fn(ctx: u64) -> bool>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of OrcHost__bindgen_ty_2"][::std::mem::size_of::<OrcHost__bindgen_ty_2>() - 32usize];
    ["Alignment of OrcHost__bindgen_ty_2"]
        [::std::mem::align_of::<OrcHost__bindgen_ty_2>() - 8usize];
    ["Offset of field: OrcHost__bindgen_ty_2::report_progress"]
        [::std::mem::offset_of!(OrcHost__bindgen_ty_2, report_progress) - 0usize];
    ["Offset of field: OrcHost__bindgen_ty_2::report_error"]
        [::std::mem::offset_of!(OrcHost__bindgen_ty_2, report_error) - 8usize];
    ["Offset of field: OrcHost__bindgen_ty_2::report_warning"]
        [::std::mem::offset_of!(OrcHost__bindgen_ty_2, report_warning) - 16usize];
    ["Offset of field: OrcHost__bindgen_ty_2::check_cancellation"]
        [::std::mem::offset_of!(OrcHost__bindgen_ty_2, check_cancellation) - 24usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of OrcHost"][::std::mem::size_of::<OrcHost>() - 48usize];
    ["Alignment of OrcHost"][::std::mem::align_of::<OrcHost>() - 8usize];
    ["Offset of field: OrcHost::memory_api"][::std::mem::offset_of!(OrcHost, memory_api) - 0usize];
    ["Offset of field: OrcHost::callbacks"][::std::mem::offset_of!(OrcHost, callbacks) - 16usize];
};
pub type OrcDims = [i32; 7usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OrcMark {
    pub depth: u8,
    pub pos: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of OrcMark"][::std::mem::size_of::<OrcMark>() - 16usize];
    ["Alignment of OrcMark"][::std::mem::align_of::<OrcMark>() - 8usize];
    ["Offset of field: OrcMark::depth"][::std::mem::offset_of!(OrcMark, depth) - 0usize];
    ["Offset of field: OrcMark::pos"][::std::mem::offset_of!(OrcMark, pos) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OrcHandle {
    pub handle: u64,
    pub items: *mut ::std::os::raw::c_void,
    pub n_items: u64,
    pub item_size: u64,
    pub marks: *mut OrcMark,
    pub stride_offset: *mut u64,
    pub n_marks: u64,
    pub strides: *mut u64,
    pub type_id: OrcTypeId,
    pub dims: OrcDims,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of OrcHandle"][::std::mem::size_of::<OrcHandle>() - 104usize];
    ["Alignment of OrcHandle"][::std::mem::align_of::<OrcHandle>() - 8usize];
    ["Offset of field: OrcHandle::handle"][::std::mem::offset_of!(OrcHandle, handle) - 0usize];
    ["Offset of field: OrcHandle::items"][::std::mem::offset_of!(OrcHandle, items) - 8usize];
    ["Offset of field: OrcHandle::n_items"][::std::mem::offset_of!(OrcHandle, n_items) - 16usize];
    ["Offset of field: OrcHandle::item_size"]
        [::std::mem::offset_of!(OrcHandle, item_size) - 24usize];
    ["Offset of field: OrcHandle::marks"][::std::mem::offset_of!(OrcHandle, marks) - 32usize];
    ["Offset of field: OrcHandle::stride_offset"]
        [::std::mem::offset_of!(OrcHandle, stride_offset) - 40usize];
    ["Offset of field: OrcHandle::n_marks"][::std::mem::offset_of!(OrcHandle, n_marks) - 48usize];
    ["Offset of field: OrcHandle::strides"][::std::mem::offset_of!(OrcHandle, strides) - 56usize];
    ["Offset of field: OrcHandle::type_id"][::std::mem::offset_of!(OrcHandle, type_id) - 64usize];
    ["Offset of field: OrcHandle::dims"][::std::mem::offset_of!(OrcHandle, dims) - 72usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OrcItemProxy {
    pub tree: u64,
    pub item: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of OrcItemProxy"][::std::mem::size_of::<OrcItemProxy>() - 16usize];
    ["Alignment of OrcItemProxy"][::std::mem::align_of::<OrcItemProxy>() - 8usize];
    ["Offset of field: OrcItemProxy::tree"][::std::mem::offset_of!(OrcItemProxy, tree) - 0usize];
    ["Offset of field: OrcItemProxy::item"][::std::mem::offset_of!(OrcItemProxy, item) - 8usize];
};
unsafe extern "C" {
    pub fn orc_plugin_init(host: *const OrcHost, plugin_data_out: *mut OrcPlugin);
}
unsafe extern "C" {
    pub fn orc_deck_alloc(id: OrcTypeId, out: *mut OrcHandle);
}
unsafe extern "C" {
    pub fn orc_deck_free(handle: *mut OrcHandle);
}
unsafe extern "C" {
    pub fn orc_deck_from_proxy(
        inputs: *const OrcHandle,
        n_inputs: u64,
        proxy_type: u32,
        proxy: *const OrcHandle,
        out: *mut OrcHandle,
    );
}
